recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:1: error: Missing closing brace `}' assumed here
def crab(levels:Int, length:Double) {
^Crab:1: error: expected class or object definition
def crab(levels:Int, length:Double) {
^